# agent-gateway

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  SUPABASE_SETUP.md  package-lock.json  package.json  vercel.json
.codexlocal/: README.md  mcp-snippet.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  reset-demo.yml
apps/api/: .env.example  Dockerfile  RUN_LOCALLY.md  pyproject.toml
apps/api/app/: auth.py  config.py  db.py  main.py
apps/api/app/agent/: orchestrator.py
apps/api/app/agent/tools/: audit.py  definitions.py  executor.py  policy.py  registry.py
apps/api/app/llm/: cohere.py
apps/api/app/rag/: chunk.py  retrieve.py
apps/api/app/security/: prompt_injection.py
apps/api/app/services/: leave_service.py  quota_service.py
apps/api/app/tests/: conftest.py  test_acl.py  test_policy.py  test_prompt_injection.py  test_rag_chunk.py  test_role_authorization.py
apps/api/app/workers/: seed_ingest.py
apps/web/: .env.example  package.json  tailwind.config.js  vitest.config.ts
docs/: architecture.md  demo.md  demo_credentials.md  deployment.md  launch.md  live-demo.md
e2e/: README.md  landing-and-roles.mjs  manager-approve.mjs
scripts/: .env.example  create_demo_users.ts  dev-api.sh  dev.sh  package-lock.json  package.json  reset_demo.ts  seed_remote.sh  setup-supabase-mcp.sh  supabase-bootstrap.sh  who-is-on-port.sh
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_leave_functions.sql  0004_match_chunks.sql  0005_demo_reset.sql  0006_leave_manager.sql  0007_more_leave_types.sql
(+28 files in other folders)
