[project]
name = "agent-gateway-api"
version = "0.1.0"
description = "FastAPI agent + tool gateway for Secure Enterprise Agent Gateway"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "supabase>=2.4.0",
  "httpx>=0.27.0",
  "cohere>=5.5.0",
  "python-jose[cryptography]>=3.3.0",
  "PyJWT>=2.8.0",
  "tenacity>=8.2.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 110
target-version = "py311"
